feat: add schemalint command

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,9 +15,9 @@ author_email = ababjam61+github@gmail.com
 include_package_data = True
 zip_safe = False
 
-# [options.entry_points]
-# console_scripts =
-#     schemalint = schemalint.cli:main
+[options.entry_points]
+console_scripts =
+    schemalint = schemalint.cli:main
 
 [bdist_wheel]
 universal=0
