--- a/schemalint/management/resources/root.yaml
+++ b/schemalint/management/resources/root.yaml
@@ -1,5 +1,6 @@
 docker-compose.yml:
   url: "https://raw.githubusercontent.com/docker/compose/master/compose/config/config_schema_v{version}.json"
+  get-version: "#/version"
   version:
     [3.7, 3.6, 3.5, 3.4, 3.3, 3.2, 3.1, 3.0, 2.4, 2.3, 2.2, 2.1, 2.0, 1]
   alias:
