chore: add notfound examples

--- a/examples/validation/Makefile
+++ b/examples/validation/Makefile
@@ -1,6 +1,6 @@
 TEE ?= | tee
 
-default: 00 01 02
+default: 00 01 02 03 04
 
 00:
 	mkdir -p dst/$@/
@@ -13,4 +13,10 @@ default: 00 01 02
 02:
 	mkdir -p dst/$@/
 	python execute.py -s src/$@*/schema.json src/$@*/ng.json ${TEE} dst/$@/ng.json.output
+	python execute.py -s src/$@*/schema.json src/$@*/ng.yaml ${TEE} dst/$@/ng.yaml.output
+03:
+	mkdir -p dst/$@/
+	python execute.py -s src/$@*/schema.json src/$@*/ng.yaml ${TEE} dst/$@/ng.yaml.output
+04:
+	mkdir -p dst/$@/
 	python execute.py -s src/$@*/schema.json src/$@*/ng.yaml ${TEE} dst/$@/ng.yaml.output
